# WynnBuilderTools

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  json_to_tree.py  makefile
.github/: cliff.toml
.github/workflows/: create-gh-release-action.yml
assets/: apparels.json  apparels_test_case.json  atree.json  atree_test_case.json  id_map.json  majid.json
benches/: as_ref.rs  combinations.rs  miscellaneous.rs  permutations.rs  random_number.rs  select_from_arrays.rs  skill_points.rs
config/: config.toml  schema.json  tree.json
doc/: zh-CN.md
migrations/: 01_create_builds_table.sql  02_create_damage_table.sql  20200510030904_table_create.sql  README.md
src/: builder.rs  db.rs  lib.rs  main.rs  search_item.rs
src/args/: generate_sort_by.rs  item_search_args.rs  mod.rs
src/calculate/: ability.rs  dam.rs  damage_calculate.rs  def.rs  hp.rs  hppeng.rs  mod.rs  rolls.rs  skill_point.rs
src/config/: build_config.rs  init.rs  io.rs  mod.rs
src/items/: ability.rs  apparel.rs  atk_spd.rs  class.rs  comm_stat.rs  common_stat.rs  dam.rs  damages.rs  item.rs  items.rs  major_id.rs  mod.rs  point.rs  range.rs  sec_stat.rs  spell.rs  wapi_item.rs  weapon.rs
src/items/api_items/: api_item.rs  api_to_internal_items.rs  items_data.rs  mod.rs
src/network/: fetch_json_from_config.rs  mod.rs
src/stat/: ability.rs  dam.rs  damage_calcuate.rs  damage_calculate.rs  def.rs  encode.rs  exp.rs  hp.rs  hppeng.rs  loot.rs  mod.rs  rolls.rs  skill_point.rs  spell_dam.rs
src/tests/: mod.rs
src/util/: combinations.rs  mod.rs  permutations.rs
