[package]
name = "wynn_build_tools"
version = "0.3.1"
edition = "2021"

[lib]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
percentage = "0.1.0"
serde_json = "1.0.128"
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
sql-builder = "3.1"
rayon = "1.6.1"
rand = "0.8.5"
fastrand = "1.9.0"
criterion = { version = "0.4", features = ["html_reports"] }
num = "0.4.0"
serde = "1.0.160"
toml = "0.7.6"
clap = { version = "4.4.2", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["blocking", "json"]}
schemafy = "0.5.2"
serde_with = "3.10.0"
casey = "0.4.0"

[[bin]]
name = "builder"
path = "src/builder.rs"
[[bin]]
name = "search_item"
path = "src/search_item.rs"

[[bench]]
name = "skill_points"
harness = false
[[bench]]
name = "random_number"
harness = false
[[bench]]
name = "miscellaneous"
harness = false
[[bench]]
name = "permutations"
harness = false
[[bench]]
name = "select_from_arrays"
harness = false
[[bench]]
name = "as_ref"
harness = false
[[bench]]
name = "combinations"
harness = false
